--- a/co.edu.uniandes.fixml/.classpath
+++ b/co.edu.uniandes.fixml/.classpath
@@ -3,28 +3,14 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="src" path="src-gen"/>
-	<classpathentry exported="true" kind="var" path="ECLIPSE_CORE_RUNTIME">
-		<attributes>
-			<attribute name="plugin_id" value="org.eclipse.core.runtime"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry exported="true" kind="var" path="ECLIPSE_CORE_RESOURCES">
-		<attributes>
-			<attribute name="plugin_id" value="org.eclipse.core.resources"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry exported="true" kind="var" path="EMF_COMMON">
-		<attributes>
-			<attribute name="plugin_id" value="org.eclipse.emf.common"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry exported="true" kind="var" path="EMF_ECORE">
-		<attributes>
-			<attribute name="plugin_id" value="org.eclipse.emf.ecore"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry exported="true" kind="lib" path="D:/Kepler Modeling/plugins/org.eclipse.emf.ecore.xmi_2.9.1.v20131212-0545.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.core.resources_3.8.100.v20130521-2026.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.core.resources.win32.x86_3.5.100.v20100505-1741.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.core.runtime_3.9.0.v20130326-1255.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.emf.common_2.9.2.v20131212-0545.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.emf.ecore_2.9.2.v20131212-0545.jar"/>
+	<classpathentry kind="lib" path="lib/org.eclipse.emf.ecore.xmi_2.9.1.v20131212-0545.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/org.eclipse.epsilon.standalonePro"/>
+	<classpathentry kind="lib" path="lib/epsilon-1.1_SR1-emf-src.jar"/>
+	<classpathentry kind="lib" path="lib/epsilon-standalone-pro.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
